# uv2nix

./: .gitignore  404.html  FAQ.html  HACKING.html  README.md  default.nix  flake.nix  highlight.js  index.html  install.html  introduction.html  print.html  renovate.json  searchindex.js  searchindex.json
.github/workflows/: nix-github-actions.yml
dev/: build-system-overrides.nix  build-systems.nix  checks.nix
doc/: book.toml  default.nix
doc/src/: FAQ.md  HACKING.md  SUMMARY.md  basic.md  install.md  introduction.md  platform-quirks.md
doc/src/lib/: lock1.md  workspace.md
doc/src/overriding/: index.md  overrides-sdist.nix
doc/src/patterns/: meta.md  scripts.md  testing.md
doc/src/showcases/: django.md
doc/src/usage/: buildpythonpackage.md  hello-world.md  overriding-build-systems.md  overriding.md  pyproject-build.md  testing.md
lib/: build.nix  default.nix  lock1.html  lock1.nix  renderers.nix  test.nix  test_build.nix  test_lock1.nix  test_renderers.nix  test_workspace.nix  testutil.nix  workspace.html  workspace.nix
lib/expected/: lock1.filterPackage.testDevDeps.json  lock1.filterPackage.testMultiChoicePackage.json  lock1.filterPackage.testOptionalDeps.json  lock1.parseLock.testKitchenSinkA.json  lock1.parseLock.testMultiChoicePackage.json  lock1.parseLock.testMultiPythons.json  lock1.parseLock.testNo-build-no-binary-packages.json  lock1.parseLock.testNo-build.json  lock1.parseLock.testWithExtra.json  lock1.parseLock.testWithResolverOptions.json  lock1.parseLock.testWithSupportedEnvironments.json  lock1.parseLock.testWithToolUvDevDeps.json  lock1.parseLock.testWorkspace.json  lock1.parseLock.testWorkspaceFlat.json  lock1.parsePackage.testGitURL.json  lock1.parsePackage.testLocal.json  lock1.parsePackage.testLocalEditable.json  lock1.parsePackage.testLocalSdist.json  lock1.parsePackage.testMetadataRequiresDev.json  lock1.parsePackage.testMetadataRequiresDistMany.json  lock1.parsePackage.testOptionalDeps.json  lock1.parsePackage.testSdistURL.json  lock1.parsePackage.testTrivial.json  lock1.parsePackage.testWheelURL.json  lock1.parsePackage.testWithExtra.json  lock1.parsePackage.testWithResolutionMarkers.json  lock1.resolveDependencies.testDevDeps.json  lock1.resolveDependencies.testMultiPythons.json  lock1.resolveDependencies.testResolveKitchenSink.json  lock1.resolveDependencies.testResolveWithOptionals.json  workspace.loadConfig.testNo-binary-no-build.json  workspace.loadConfig.testNo-binary.json  workspace.loadConfig.testNo-build-no-binary-packages.json  workspace.loadConfig.testNo-build.json  workspace.loadConfig.testTrivial.json
lib/fixtures/: update.py
lib/fixtures/bootstrap-project-dep/: pyproject.toml
lib/fixtures/bootstrap-project-dep/src/bootstrap_project_dep/: __init__.py
lib/fixtures/dependency-groups/: pyproject.toml
lib/fixtures/dynamic-dependencies/: hello.py  pyproject.toml
lib/fixtures/dynamic-dependencies/dynamic-deps/: pyproject.toml
lib/fixtures/kitchen-sink/a/: pyproject.toml
lib/fixtures/kitchen-sink/a/src/a/: __init__.py
lib/fixtures/kitchen-sink/b/: pyproject.toml
lib/fixtures/kitchen-sink/c-editable/: pyproject.toml
lib/fixtures/multi-choice-package/: pyproject.toml
lib/fixtures/multi-choice-package/src/multi_choice_package/: __init__.py
lib/fixtures/multi-pythons/: pyproject.toml
lib/fixtures/multi-pythons/src/multi_pythons/: __init__.py
lib/fixtures/no-binary/: pyproject.toml
lib/fixtures/no-binary-no-build/: pyproject.toml
lib/fixtures/no-binary-no-build/src/no_binary_no_build/: __init__.py
lib/fixtures/no-binary/src/no_binary/: __init__.py
lib/fixtures/no-build/: pyproject.toml
lib/fixtures/no-build-no-binary-packages/: pyproject.toml
lib/fixtures/no-build/src/no_build/: __init__.py
lib/fixtures/no-deps/: pyproject.toml
lib/fixtures/no-deps/src/no_deps/: __init__.py
lib/fixtures/only-wheels/: pyproject.toml
lib/fixtures/only-wheels/src/only_wheels/: __init__.py
lib/fixtures/optional-deps/: pyproject.toml
lib/fixtures/optional-deps/src/optional_deps/: __init__.py
lib/fixtures/overriden-registry/: pyproject.toml
lib/fixtures/overriden-registry/src/overriden_registry/: __init__.py
lib/fixtures/trivial/: pyproject.toml
lib/fixtures/trivial/src/trivial/: __init__.py
lib/fixtures/virtual/: pyproject.toml
lib/fixtures/with-build-requires/: pyproject.toml
lib/fixtures/with-build-requires/src/with_build_requires/: __init__.py
lib/fixtures/with-extra/: pyproject.toml
lib/fixtures/with-extra/src/with_extra/: __init__.py
lib/fixtures/with-resolver-options/: pyproject.toml
lib/fixtures/with-resolver-options/src/with_resolver_options/: __init__.py
lib/fixtures/with-supported-environments/: 1  pyproject.toml
lib/fixtures/with-supported-environments/src/with_supported_environments/: __init__.py
lib/fixtures/with-tool-uv-devdeps/: pyproject.toml
lib/fixtures/with-tool-uv-devdeps/src/with_tool_uv_devdeps/: __init__.py
lib/fixtures/workspace/: pyproject.toml
lib/fixtures/workspace-with-excluded/: pyproject.toml
npins/: sources.json
pkgs/uv-bin/: default.nix  srcs.json  update.py
showcases/: django.html
templates/app/: flake.nix  pyproject.toml
templates/app/src/app/: __init__.py
templates/development-scripts/: flake.nix  pyproject.toml
templates/development-scripts/examples/: greet.py
templates/development-scripts/src/development_scripts/: __init__.py
templates/django-webapp/: .gitignore  flake.nix  manage.py  pyproject.toml
templates/django-webapp/src/django_webapp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/django-webapp/tests/: test_webapp.py
templates/hello-world/: flake.nix  pyproject.toml
templates/hello-world/src/hello_world/: __init__.py
templates/overriding/: flake.nix  overrides-sdist.nix  overrides-wheels.nix  pyproject.toml
templates/overriding/src/overriding/: __init__.py
templates/testing/: flake.nix  pyproject.toml
templates/testing/src/testing/: __init__.py
templates/testing/tests/: test_hello.py
usage/: buildpythonpackage.html  hello-world.html  overriding.html  pyproject-build.html  testing.html
(+3 files in other folders)
