[project]
name = "django-webapp"
version = "0.1.0"
description = "A django web application developed & deployed using uv2nix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "daphne>=4.1.2",
]

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "typing"},
  {include-group = "lint"},
]
typing = [
  "django-stubs[compatible-mypy]>=5.1.1",
  "mypy>=1.13.0",
]
test = [
  "pytest-cov>=6.0.0",
  "pytest-django>=4.9.0",
  "pytest>=8.3.3",
]
lint = [
  "ruff>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_webapp.settings"

[tool.mypy]
exclude =  ["manage.py"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_webapp.settings"
