[project]
name = "multi-choice-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arpeggio==2.0.1; platform_release == '5.10.65'",
  "arpeggio==2.0.2; platform_release == '5.10.104'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
