[project]
name = "no-binary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arpeggio>=2.0.2",
]

[project.scripts]
hello = "no_binary:hello"

[tool.uv]
no-binary = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
