[project]
name = "no-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arpeggio>=2.0.2",
]

[project.scripts]
hello = "no_build:hello"

[tool.uv]
no-build = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
